Made improvements to the 482+ mobile views, adjusting CSS to ensure that the skill section cards and resume do not sink into other divs, made text bigger so some content is more legible.

--- a/src/components/Skills/media/highres-desktop-1282.css
+++ b/src/components/Skills/media/highres-desktop-1282.css
@@ -6,7 +6,7 @@
         -moz-animation: AnimationName 30s ease infinite;
         -o-animation: AnimationName 30s ease infinite;
         animation: AnimationName 30s ease infinite;
-        height: 400px !important;
+        height: 400px;
         color: #ffffff;
         box-shadow: none !important;
         padding: 0;
