--- a/src/components/Skills/media/phone-320.css
+++ b/src/components/Skills/media/phone-320.css
@@ -6,7 +6,7 @@
         -moz-animation: AnimationName 30s ease infinite;
         -o-animation: AnimationName 30s ease infinite;
         animation: AnimationName 30s ease infinite;
-        height: 70vh !important;
+        height: 70vh;
         color: #ffffff;
         box-shadow: none !important;
         padding: 0;
